force-app/main/default/objects/Enrollment__c/fields/Cancelled_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Sessions__c</fullName>
    <label>Cancelled Sessions</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>