force-app/main/default/objects/Enrollment__c/fields/Class_Session__c.field-meta.xml
<CustomField>
    <fullName>Class_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Session</label>
    <referenceTo>Class_Session__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>