force-app/main/default/objects/Enrollment__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <formula>TEXT( Class__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Type</label>
    <type>Text</type>
</CustomField>