force-app/main/default/objects/Enrollment__c/fields/Completed_Credits__c.field-meta.xml
<CustomField>
    <fullName>Completed_Credits__c</fullName>
    <label>Completed Credits</label>
    <summarizedField>Enrollment_Class__c.Credits__c</summarizedField>
    <summaryFilterItems>
        <field>Enrollment_Class__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Enrollment_Class__c.Enrollment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>