force-app/main/default/objects/Enrollment__c/fields/Enrolled_Credits__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Credits__c</fullName>
    <formula>Class__r.Course__r.Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolled Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>