force-app/main/default/objects/Enrollment__c/fields/No_Attended_Session__c.field-meta.xml
<CustomField>
    <fullName>No_Attended_Session__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No of Attended  Session in Student session Object</description>
    <label>Attended Session(s)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>