force-app/main/default/objects/Enrollment__c/fields/No_of_canceled_Session__c.field-meta.xml
<CustomField>
    <fullName>No_of_canceled_Session__c</fullName>
    <description>No of Canceled Session in Student Session Object</description>
    <label>No of canceled Session</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>