force-app/main/default/objects/Enrollment__c/fields/No_Scheduled_Job__c.field-meta.xml
<CustomField>
    <fullName>No_Scheduled_Job__c</fullName>
    <description>No of Scheduled Session in Student Session Object</description>
    <label>No Scheduled Job</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>