force-app/main/default/objects/Enrollment__c/fields/Not_Attended_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Not_Attended_Sessions__c</fullName>
    <label>Not Attended Sessions</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>