force-app/main/default/objects/Enrollment__c/fields/Parent_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_Email__c</fullName>
    <label>Account Email</label>
    <type>Email</type>
</CustomField>