force-app/main/default/objects/Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
                <isActive>false</isActive>
                <label>Abandoned</label>
            </value>
            <value>
                <fullName>Enrolled</fullName>
                <isActive>false</isActive>
                <label>Enrolled</label>
            </value>
            <value>
                <fullName>Terminated</fullName>
                <isActive>false</isActive>
                <label>Terminated</label>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
                <isActive>false</isActive>
                <label>Waitlisted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>