force-app/main/default/objects/Enrollment__c/fields/Total_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Sessions__c</fullName>
    <label>Total Sessions</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>